2013-07-16  Paul Eggert  <eggert@cs.ucla.edu>

	Fix minor problems found by --enable-gcc-warnings.
	* frame.c (Fhandle_focus_in, Fhandle_focus_out): Return a value.
	* keyboard.c (kbd_buffer_get_event): Remove unused local.

2013-07-16  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (x_focus_changed): Always generate FOCUS_IN_EVENT.
	Set event->arg to Qt if switch-event shall be generated.
	Generate FOCUS_OUT_EVENT for FocusOut if this is the focused frame.

	* termhooks.h (enum event_kind): Add FOCUS_OUT_EVENT.

	* nsterm.m (windowDidResignKey): If this is the focused frame, generate
	FOCUS_OUT_EVENT.

	* keyboard.c (Qfocus_in, Qfocus_out): New static objects.
	(make_lispy_focus_in, make_lispy_focus_out): Declare and define.
	(kbd_buffer_get_event): For FOCUS_IN, make a focus_in event if no
	switch frame event is made.  Check ! NILP (event->arg) if X11 (moved
	from xterm.c). Make focus_out event for FOCUS_OUT_EVENT if NS or X11
	and there is a focused frame.
	(head_table): Add focus-in and focus-out.
	(keys_of_keyboard): Add focus-in and focus-out to Vspecial_event_map,
	bind to handle-focus-in/out.

	* frame.c (Fhandle_focus_in, Fhandle_focus_out): New functions.
	(Fhandle_switch_frame): Call Fhandle_focus_in.
	(syms_of_frame): defsubr handle-focus-in/out.

2013-07-16  Paul Eggert  <eggert@cs.ucla.edu>

	Fix porting bug to older POSIXish platforms (Bug#14862).
	* sysdep.c (emacs_pipe): New function, that implements
	pipe2 (fd, O_CLOEXEC) even on hosts that lack O_CLOEXEC.
	This should port better to CentOS 5 and to Mac OS X 10.6.
	All calls to pipe2 changed.

	Prefer list1 (X) to Fcons (X, Qnil) when building lists.
	This makes the code easier to read and the executable a bit smaller.
	Do not replace all calls to Fcons that happen to create lists,
	just calls that are intended to create lists.  For example, when
	creating an alist that maps FOO to nil, use list1 (Fcons (FOO, Qnil))
	rather than list1 (list1 (FOO)) or Fcons (Fcons (FOO, Qnil), Qnil).